<resources>
    <string name="app_name">Volo Customer</string>
    <string name="app_logo">app logo</string>
    <string name="menu_icon">menu icon</string>
    <string name="search_icon">search_icon</string>
    <string name="delivering_to">Delivering to:</string>
    <string name="tap_to_select_address">Tap to select address</string>
    <string name="browse_partners">Browse Partners</string>
    <string name="company">Volo</string>
    <string name="promotions">Promotions</string>
    <string name="reservations">Reservations</string>
    <string name="my_orders">My Orders</string>
    <string name="home">Home</string>
    <string name="my_reservations">My Reservations</string>
    <string name="about_volo">About VOLO</string>
    <string name="wallet">Wallet</string>
    <string name="select_your_delivery_address">Select your delivery address:</string>
    <string name="tap_to_choose_delivery_location">Tap to choose delivery location</string>
    <string name="use_the_map_to_select_your_delivery_address">Use the map to select your delivery address</string>
    <string name="_3333_riifa_avenue_913_riffa_037_2222222222">3333, Riifa Avenue, 913, Riffa, +037 2222222222</string>
    <string name="_193_19_1260_awal_ave_324_juffair_937_777777777">193, 19, 1260, Awal Ave, 324, Juffair, _937 777777777</string>
    <string name="location_icon">location icon</string>
    <string name="close_icon">Close Icon</string>
    <string name="closed_alert">Sorry, VOLO is closed at the moment but they do allow pre orders. You can browse the menu and pre order</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>
    <string name="sorry_message">Sorry, there is no partner of this type near \n you yet</string>
    <string name="alert">Alert</string>
    <string name="hangout_3333_riffa">Hangout, 3333, Riffa</string>
    <string name="sad_image">sad image</string>
    <string name="sad">Sad</string>
    <string name="volo">VOLO</string>
    <string name="frozen_yoghurt_lebanese_persian">Frozen yoghurt, Lebanese, Persian</string>
    <string name="distance_8_00_km_min_bd_9_000">Distance: 8.00 km | Min: BD 9,000</string>
    <string name="delivery_bd_1_300_duration_52_mins">Delivery: BD 1,300 | Duration: 52 mins</string>
    <string name="placeholder_image">Placeholder Image</string>
    <string name="back_icon">back icon</string>
    <string name="help">Help</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="i_have_an_issue_with_a_current_order">I have an issue with a current order</string>
    <string name="check_out_our_faqs">Check out our FAQs</string>
    <string name="chat_directly_with_us">Chat directly with us</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="password_must_be_between_8_12_characters">Password must be between 8–12 characters</string>
    <string name="date_of_birth_optional">Date of Birth (Optional)</string>
    <string name="please_enter_details">Please Enter Details</string>
    <string name="select_country_code_amp_enter_phone_number"><![CDATA[Select Country Code & Enter Phone Number]]></string>
    <string name="i_agree_with_volo_s_terms_and_conditions">I agree with VOLO\'s terms and conditions.</string>
    <string name="confirm">Confirm</string>
    <string name="settings">Settings</string>
    <string name="language">Language:</string>
    <string name="english">English</string>
    <string name="bahrain">Bahrain</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_">Sign Up?</string>
    <string name="about">About</string>
    <string name="our_vision">Our Vision</string>
    <string name="we_envision_a_world_where_people_can_browse_and_order_what_they_want_whenever_they_want_with_a_couple_of_taps_on_a_screen_free_from_all_the_hassle_and_with_all_the_support_needed">We envision a world where people can browse and order what they want whenever they want with a couple of taps on a screen, free from all the hassle and with all the support needed</string>
    <string name="our_mission">Our Mission</string>
    <string name="we_ve_made_it_our_mission_to_be_the_middle_man_and_the_helping_hand_to_all_of_our_users_by_offering_a_quality_experience_to_all_the_parties_involved_with_us">We\'ve made it our mission to be the middle man and the helping hand to all of our users by offering a quality experience to all the parties involved with us</string>
    <string name="got_something_to_say">Got something to say?</string>
    <string name="your_opinion_matter_to_us_so_if_you_have_a_suggestion_or_a_complaint_please_let_us_know_by_tapping_the_button_below_and_filling_out_the_form_alternatively_you_can_chat_directly_with_us_via_live_chat_and_we_ll_be_happy_to_listen">Your opinion matter to us so if you have a suggestion or a complaint please let us know by tapping the button below and filling out the form, Alternatively you can chat directly with us via live chat and we\'ll be happy to listen</string>
    <string name="suggestions">Suggestions</string>
    <string name="press_the_link_below_to_view_our_terms_and_conditions">Press the link below to view our terms and conditions</string>
    <string name="submit">submit</string>
    <string name="write_your_suggestion_or_complaint_below">Write your suggestion or complaint below</string>
    <string name="some_items_are_missing">Some items are missing</string>
    <string name="i_received_some_items_that_i_didn_t_order">I received some items that I didn\'t order</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="my_order_is_late">My order is late</string>
    <string name="we_re_sorry_to_hear_that_n_you_can_check_the_status_of_your_order_form_the_order_tracking_page_you_can_also_call_and_chat_with_your_driver_from_there_or_ring_up_the_partner_alternatively_you_can_contact_us_by_pressing_the_button_below_and_we_ll_get_this_resolved_for_you">We\'re sorry to hear that.\nYou can check the status of your order form the order tracking page, you can also call and chat with your driver from there or ring up the partner, alternatively, you can contact us by pressing the button below and we\'ll get this resolved for you</string>
    <string name="chat_with_us">Chat with us</string>
    <string name="account_information">Account Information</string>
    <string name="first_name">First Name:</string>
    <string name="mohammed">Mohammed</string>
    <string name="_937_00000">+937 00000</string>
    <string name="change_recovery_code">Change Recovery Code</string>
    <string name="manage_addresses">Manage Addresses</string>
    <string name="add_address">Add Address</string>
    <string name="code_sent">Code Sent !</string>
    <string name="due_to_security_concerns_we_ll_send_you_a_code_via_sms_to_verify_that_937_22222544_is_your_number_please_enter_the_code_below">Due to security concerns we\'ll send you a code via sms to verify that +937 22222544 is your number. Please enter the code below.</string>

</resources>