<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alert_dialog"
    android:layout_width="350dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_height="360dp"
    android:layout_gravity="center"
    android:theme="@style/Theme.VoloCustomer.Dark"
    android:elevation="8dp"
    android:background="@drawable/alert_dialog_background"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/alert"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:layout_below="@id/title"
        android:id="@+id/sorry_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/sad_image"
        android:src="@drawable/ic_sorry" />

    <TextView
        android:padding="10dp"
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sorry_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/closed_alert"
        android:textAlignment="center" />


    <RelativeLayout
        android:layout_marginBottom="30dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:textColor="@color/white"
            android:id="@+id/okay"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/secondary"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/okay"
            android:backgroundTint="@color/secondary"
            android:text="@string/okay"
            android:textColor="@color/white" />


    </RelativeLayout>


</RelativeLayout>