<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SuggestionPage">

    <RelativeLayout
        android:background="@color/secondary"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/back_icon"
            android:onClick="callAbout"
            android:src="@drawable/ic_back"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestions"
            android:textColor="@color/primary"
            android:textSize="18sp" />

    </RelativeLayout>


    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/help_txt"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/write_your_suggestion_or_complaint_below"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <Button
            android:layout_alignParentBottom="true"
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="65dp"/>

    </RelativeLayout>

</LinearLayout>