<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawer_layout"
    android:theme="@style/Theme.VoloCustomer.Drawer"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        app:itemTextColor="@color/primary"
        app:itemIconTint="@color/primary"
        app:itemShapeFillColor="@color/white"
        android:layout_height="match_parent"
        android:background="@color/secondary"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <LinearLayout
        android:id="@+id/content_view"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="10dp"
            android:background="@color/secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/menu_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_menu"/>

            <ImageView
                android:id="@+id/search_icon"
                android:layout_marginEnd="5dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"/>

            <LinearLayout
                android:id="@+id/menu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="@font/roboto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/delivering_to"
                    android:textColor="@color/primary" />

                <TextView
                    android:fontFamily="@font/roboto_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_to_select_address"
                    android:textColor="@color/primary"
                    android:textSize="18sp" />

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:fontFamily="@font/roboto"
            android:id="@+id/browse_partners"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textAllCaps="false"
            android:textColor="@color/font_dark"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/browse_partners"/>


    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>