<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignIn">

    <RelativeLayout
        android:background="@color/secondary"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:onClick="callSettings"
            android:id="@+id/back_icon"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/primary"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:id="@+id/email"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black"
            app:hintTextColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            android:hint="@string/email"
            app:boxStrokeWidth="0dp"
            app:placeholderTextColor="@color/black"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/primary"
            app:boxStrokeWidthFocused="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:inputType="text"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@id/email"
            android:layout_marginTop="20dp"
            android:id="@+id/password"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/black"
            app:hintTextColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            android:hint="Password"
            app:boxStrokeWidth="0dp"
            app:placeholderTextColor="@color/black"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/primary"
            app:boxStrokeWidthFocused="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:inputType="text"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_medium"
            android:padding="15dp"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textSize="18sp" />


        <TextView
            android:onClick="callSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_medium"
            android:padding="15dp"
            android:text="@string/sign_up_"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <Button
            android:text="@string/sign_in"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end"
            android:layout_width="match_parent"
            android:layout_height="65dp"/>

    </RelativeLayout>

</LinearLayout>